# SekiWithoutQueue

./: Board.h  CMakeLists.txt  Config.h  Game.h  README.md  main.cpp
Bot/: Bot.cpp  Bot.h
tests/: BoardTest.cpp  BotTest.cpp
txt/: Hello.txt
